--- a/SubstrateNetApi/SubstrateNetApi/SubstrateNetApi.csproj
+++ b/SubstrateNetApi/SubstrateNetApi/SubstrateNetApi.csproj
@@ -6,10 +6,10 @@
 
   <ItemGroup>
     <PackageReference Include="Blake2Core" Version="1.0.0" />
+    <PackageReference Include="Extensions.Data.xxHash.core20" Version="1.0.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="SimpleBase" Version="2.1.0" />
     <PackageReference Include="StreamJsonRpc" Version="2.5.46" />
-    <PackageReference Include="System.Data.HashFunction.xxHash" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
