--- a/SubstrateNetApi/SubstrateNetApi/SubstrateNetApi.csproj
+++ b/SubstrateNetApi/SubstrateNetApi/SubstrateNetApi.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Blake2Core" Version="1.0.0" />
     <PackageReference Include="Extensions.Data.xxHash.core20" Version="1.0.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="SimpleBase" Version="2.1.0" />
+    <PackageReference Include="NLog" Version="4.7.4" />
+    <PackageReference Include="SimpleBase" Version="3.0.1" />
     <PackageReference Include="StreamJsonRpc" Version="2.5.46" />
   </ItemGroup>
 
