removed unnecessary function added schnorrkel tests

--- a/SubstrateNetApi/SubstrateNetApiTest/SubstrateNetApiTests.csproj
+++ b/SubstrateNetApi/SubstrateNetApiTest/SubstrateNetApiTests.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Schnorrkel\Schnorrkel.csproj" />
     <ProjectReference Include="..\SubstrateNetApi\SubstrateNetApi.csproj" />
   </ItemGroup>
 
