--- a/SubstrateNetApi/SubstrateNetApi/SubstrateNetApi.csproj
+++ b/SubstrateNetApi/SubstrateNetApi/SubstrateNetApi.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="StreamJsonRpc" Version="2.5.46" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Schnorrkel\Schnorrkel.csproj" />
+  </ItemGroup>
+
 </Project>
