Enabled nuget creation.

--- a/SubstrateNetApi/SubstrateNetApi/SubstrateNetApi.csproj
+++ b/SubstrateNetApi/SubstrateNetApi/SubstrateNetApi.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Company>mogwaicoin.org</Company>
+    <Authors>mogwaicoin.org</Authors>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +21,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Schnorrkel\Schnorrkel.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
