--- a/SubstrateNetWallet/SubstrateNetWallet.csproj
+++ b/SubstrateNetWallet/SubstrateNetWallet.csproj
@@ -2,10 +2,21 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+	  <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+	  <Company>mogwaicoin.org</Company>
+	  <Authors>mogwaicoin.org</Authors>
+	  <PackageLicenseFile>LICENSE</PackageLicenseFile>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SubstrateNetApi\SubstrateNetApi.csproj" />
   </ItemGroup>
+
+	<ItemGroup>
+		<None Include="..\LICENSE">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
 </Project>
