--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,9 +18,13 @@ build_script:
     
     appveyor PushArtifact %APPVEYOR_BUILD_FOLDER%/SubstrateNetApi/bin/Release/SubstrateNetApi.%APPVEYOR_BUILD_VERSION%.nupkg -FileName SubstrateNetApi.%APPVEYOR_BUILD_VERSION%.nupkg -DeploymentName SubstrateNetApi
     
+    appveyor PushArtifact %APPVEYOR_BUILD_FOLDER%/SubstrateNetWallet/bin/Release/SubstrateNetWallet.%APPVEYOR_BUILD_VERSION%.nupkg -FileName SubstrateNetWallet.%APPVEYOR_BUILD_VERSION%.nupkg -DeploymentName SubstrateNetWallet
+    
 test_script:
 - cmd: >-
     dotnet test --configuration Release ./SubstrateNetApiTest
+    
+    dotnet test --configuration Release ./SubstrateNetWalletTest
     
 deploy:
 - provider: NuGet
