--- a/DemoWalletTest/DemoWalletTest.csproj
+++ b/DemoWalletTest/DemoWalletTest.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SubstrateNetWallet\SubstrateNetWallet.csproj" />
+  </ItemGroup>
+
 </Project>
