--- a/DemoWalletTest/DemoWalletTest.csproj
+++ b/DemoWalletTest/DemoWalletTest.csproj
@@ -9,4 +9,10 @@
     <ProjectReference Include="..\SubstrateNetWallet\SubstrateNetWallet.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="wallet.dat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
