added storage get keys added storage subscription

--- a/DemoApiTest/DemoApiTest.csproj
+++ b/DemoApiTest/DemoApiTest.csproj
@@ -13,4 +13,6 @@
     <ProjectReference Include="..\SubstrateNetApi\SubstrateNetApi.csproj" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+
 </Project>
