implemented tuple as generic type <t1,t2> refactored EventRecords access metadata refactored EventDecoding to match Generic approach added more types

--- a/SubstrateNetApiTest/SubstrateNetApiTests.csproj
+++ b/SubstrateNetApiTest/SubstrateNetApiTests.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\SubstrateNetApi\SubstrateNetApi.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="DOTMogNET.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
