--- a/SubstrateNetApi/SubstrateNetApi.csproj
+++ b/SubstrateNetApi/SubstrateNetApi.csproj
@@ -11,7 +11,6 @@
   <ItemGroup>
     <PackageReference Include="Blake2Core" Version="1.0.0" />
     <PackageReference Include="Chaos.NaCl.Standard" Version="1.0.0" />
-    <PackageReference Include="dotnetstandard-bip39" Version="1.0.2" />
     <PackageReference Include="Extensions.Data.xxHash.core20" Version="1.0.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NLog" Version="4.7.10" />
@@ -25,6 +24,10 @@
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\dotnetstandard-bip39\dotnetstandard-bip39\dotnetstandard-bip39.csproj" />
   </ItemGroup>
 
 </Project>
