--- a/SubstrateNetApi/SubstrateNetApi.csproj
+++ b/SubstrateNetApi/SubstrateNetApi.csproj
@@ -4,8 +4,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Company>BloGa Tech AG</Company>
-    <Authors>www.dotmog.com</Authors>
+    <Authors>Cedric Decoster</Authors>
+    <Description>Just another Substrate .NET API, written in NETStandard2.0 to provide maximum compatibility for Unity3D.</Description>
+    <PackageProjectUrl>https://github.com/JetonNetwork/SubstrateNetApi/tree/origin/SubstrateNetApi</PackageProjectUrl>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/JetonNetwork/SubstrateNetApi</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
