--- a/NodeLibraryGen/NodeLibraryGen.csproj
+++ b/NodeLibraryGen/NodeLibraryGen.csproj
@@ -2,8 +2,12 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.CodeDom" Version="5.0.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SubstrateNetApi\SubstrateNetApi.csproj" />
