more refactoring actual metadata

--- a/NodeLibraryGen/NodeLibraryGen.csproj
+++ b/NodeLibraryGen/NodeLibraryGen.csproj
@@ -17,6 +17,12 @@
     <None Update="metadata.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="metadata_20210915.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="metadata_20210919.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
