updated to most actual substrate  master

--- a/NodeLibraryGen/NodeLibraryGen.csproj
+++ b/NodeLibraryGen/NodeLibraryGen.csproj
@@ -23,6 +23,9 @@
     <None Update="metadata_20210919.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="metadata_20210921.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
