--- a/SubstrateNetWallet/SubstrateNetWallet.csproj
+++ b/SubstrateNetWallet/SubstrateNetWallet.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -13,14 +13,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SubstrateNetApi\SubstrateNetApi.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Include="..\LICENSE">
       <Pack>True</Pack>
       <PackagePath></PackagePath>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SubstrateNetApiGen\SubstrateNetApiExt\SubstrateNetApiExt.csproj" />
   </ItemGroup>
 
 </Project>
